--- a/.gitignore
+++ b/.gitignore
@@ -22,5 +22,6 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 node_modules
-./package-lock.json
-./package.json
+package-lock.json
+package.json
+README.md
